# fojax

./: LICENSE  README.md  pyproject.toml  setup.cfg
scripts/cnn/: cifar10_time.py  time.sh
scripts/funnel/: funnel_grid.py  gridsearch.sh
scripts/logreg/: logreg.py
scripts/regression/: sample_regression.py
src/fojax/: data.py  nn.py  sampler.py
