[project]
name = "fojax"
version = "0.0.1"
authors = [
  { name="Adam Cobb", email="adam.cobb@sri.com" },
]
description = "A forward-mode based AD library using JAX"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]